--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.data.neo4j.open-in-view=false
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=12345678
+#spring.data.neo4j.uri=bolt://${NEO4J_URI}:7687
+#spring.data.neo4j.username=${NEO4J_USER}
+#spring.data.neo4j.password=${NEO4J_PASSWORD}
 backup.path=.
 
